# libutil

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt  libutil.kdev4  xcompile.sh
libutil/analysis/: debug.c  debug.h
libutil/arch/: random.h
libutil/arch/random/: x86.c
libutil/arch/syscall/: x86.h
libutil/arch/x86/: mode.c  mode.h  random.c
libutil/code/: patch.c  patch.h
libutil/code/disasm/: x86.h
libutil/code/hook/: jmp.c  jmp.h  pe_eat.c  pe_eat.h  pe_iat.c  pe_iat.h  vft.c  vft.h
libutil/code/signature/: find.c  find.h
libutil/code/stealth/: return_address.c  return_address.h
libutil/common/: decl.h  features.h  intrinsics.h  mathbits.c  mathbits.h  memheap.c  memheap.h  memlib.c  memlib.h  random.c  random.h  strlib.c  strlib.h  warnings.h
libutil/common/math/: bit.c  bit.h
libutil/common/memory/: heap.c  heap.h  mlib.c  mlib.h
libutil/constexpr/: random.hpp
libutil/containers/: doubly_linked_list.c  doubly_linked_list.h  stack.h  string.c  string.h  vector.c  vector.h
libutil/crypto/: crc.h  luhash.c  luhash.h
libutil/internal/: security_check_cookie.c  stack_chk_fail.c  stack_chk_fail_local.c
libutil/math/: float.c  float.h  int.c  int.h  vector.c  vector.h
libutil/platform/: syscall_unix.c
libutil/platform/nt/: common.h  ldr.c  ldr.h  pe.c  pe.h  peb.c  peb.h  teb.c  teb.h  tib.h  wine.c  wine.h
libutil/platform/sys/: syscall.h  syscall_unix.c  syscall_win.c  syscall_win_msvcx64.asm
libutil/platform/virtual_memory/: page.h  page_unix.c  page_win.c
tests/: main.cpp
